compiler/testData/diagnostics/tests/inference/builderInference/kt47986_2.diag.txt
/kt47986_2.kt:12:13: error: not enough information to infer type variable K
    val x = buildFoo { // can't infer
            ^

